fix: desaligned logo bar

--- a/front/client/src/components/Navbar/Navbar.css
+++ b/front/client/src/components/Navbar/Navbar.css
@@ -26,7 +26,7 @@
   height: 45px;
   position: absolute;
   left: 50%;
-  top: 6px;
+  top: 5px;
   margin-left: -22.5px;
   /* margin: 5px 0 5px 0; */
 }
